--- a/apps/website/src/pages/docs/components/navigation/toggle-button/usage.mdx
+++ b/apps/website/src/pages/docs/components/navigation/toggle-button/usage.mdx
@@ -12,7 +12,7 @@ description: Toggle between different states in your app with either a checkbox 
 - `ToggleButtonGroup`: Used to group toggle buttons whose actions are related, that also flushes them together.
 
 ```ts
-import { ToggleButton, ToggleButtonGroup } from '@saas-ui/pro'
+import { ToggleButton, ToggleButtonGroup } from '@saas-ui-pro/react'
 ```
 
 ## Usage
@@ -20,28 +20,40 @@ import { ToggleButton, ToggleButtonGroup } from '@saas-ui/pro'
 ### Checkbox group
 
 ```jsx
-<ToggleButtonGroup
-  type="checkbox"
-  defaultValue={['1', '2']}
-  onChange={(e) => console.log(e)}
->
-  <ToggleButton value="2">Leads</ToggleButton>
-  <ToggleButton value="3">Customers</ToggleButton>
-</ToggleButtonGroup>
+import { ToggleButton, ToggleButtonGroup } from '@saas-ui-pro/react'
+
+export default function CheckboxGroup() {
+  return (
+    <ToggleButtonGroup
+      type="checkbox"
+      defaultValue={['1', '2']}
+      onChange={(e) => console.log(e)}
+    >
+      <ToggleButton value="2">Leads</ToggleButton>
+      <ToggleButton value="3">Customers</ToggleButton>
+    </ToggleButtonGroup>
+  )
+}
 ```
 
 ### Radio
 
 ```jsx
-<ToggleButtonGroup
-  type="radio"
-  defaultValue="1"
-  onChange={(e) => console.log(e)}
->
-  <ToggleButton value="1">All</ToggleButton>
-  <ToggleButton value="2">Leads</ToggleButton>
-  <ToggleButton value="3">Customers</ToggleButton>
-</ToggleButtonGroup>
+import { ToggleButton, ToggleButtonGroup } from '@saas-ui-pro/react'
+
+export default function RadioGroup() {
+  return (
+    <ToggleButtonGroup
+      type="radio"
+      defaultValue="1"
+      onChange={(e) => console.log(e)}
+    >
+      <ToggleButton value="1">All</ToggleButton>
+      <ToggleButton value="2">Leads</ToggleButton>
+      <ToggleButton value="3">Customers</ToggleButton>
+    </ToggleButtonGroup>
+  )
+}
 ```
 
 ### Colorscheme
@@ -49,16 +61,22 @@ import { ToggleButton, ToggleButtonGroup } from '@saas-ui/pro'
 A `colorScheme` can be passed to `ToggleButtonGroup` to modify the theme of all of the child buttons.
 
 ```jsx
-<ToggleButtonGroup
-  type="checkbox"
-  colorScheme="cyan"
-  defaultValue={['1', '2']}
-  onChange={(e) => console.log(e)}
->
-  <ToggleButton value="1">All</ToggleButton>
-  <ToggleButton value="2">Leads</ToggleButton>
-  <ToggleButton value="3">Customers</ToggleButton>
-</ToggleButtonGroup>
+import { ToggleButton, ToggleButtonGroup } from '@saas-ui-pro/react'
+
+export default function ColorScheme() {
+  return (
+    <ToggleButtonGroup
+      type="checkbox"
+      colorScheme="cyan"
+      defaultValue={['1', '2']}
+      onChange={(e) => console.log(e)}
+    >
+      <ToggleButton value="1">All</ToggleButton>
+      <ToggleButton value="2">Leads</ToggleButton>
+      <ToggleButton value="3">Customers</ToggleButton>
+    </ToggleButtonGroup>
+  )
+}
 ```
 
 ### Variants
@@ -66,14 +84,20 @@ A `colorScheme` can be passed to `ToggleButtonGroup` to modify the theme of all 
 Supported variants are `outline` (default) and `ghost`.
 
 ```jsx
-<ToggleButtonGroup
-  type="checkbox"
-  variant="ghost"
-  defaultValue={['1', '2']}
-  onChange={(e) => console.log(e)}
->
-  <ToggleButton value="1">All</ToggleButton>
-  <ToggleButton value="2">Leads</ToggleButton>
-  <ToggleButton value="3">Customers</ToggleButton>
-</ToggleButtonGroup>
+import { ToggleButton, ToggleButtonGroup } from '@saas-ui-pro/react'
+
+export default function Variants() {
+  return (
+    <ToggleButtonGroup
+      type="checkbox"
+      variant="ghost"
+      defaultValue={['1', '2']}
+      onChange={(e) => console.log(e)}
+    >
+      <ToggleButton value="1">All</ToggleButton>
+      <ToggleButton value="2">Leads</ToggleButton>
+      <ToggleButton value="3">Customers</ToggleButton>
+    </ToggleButtonGroup>
+  )
+}
 ```
