--- a/apps/website/src/pages/docs/components/layout/app-shell/usage.mdx
+++ b/apps/website/src/pages/docs/components/layout/app-shell/usage.mdx
@@ -7,8 +7,8 @@ description: The App Shell defines the main structure of your app.
 ---
 
 <ComponentLinks
-  github={{ package: 'saas-ui-app-shell' }}
-  npm={{ package: '@saas-ui/app-shell' }}
+  github={{ package: 'saas-ui-core/src/app-shell' }}
+  npm={{ package: '@saas-ui/core' }}
   theme={{ componentName: 'app-shell' }}
 />
 
@@ -17,7 +17,7 @@ description: The App Shell defines the main structure of your app.
 - `AppShell`: The container component that manages composition.
 
 ```ts
-import { AppShell } from '@saas-ui/app-shell'
+import { AppShell } from '@saas-ui/react'
 ```
 
 ## Usage
@@ -34,25 +34,32 @@ A shell is a collection of components shared throughout your app and can consist
 AppShell will try to fit it's parent with position `absolute` and `inset: 0` by default.
 
 ```jsx height=400px overflow=hidden
-<AppShell
-  navbar={
-    <Box as="header" borderBottomWidth="1px" py="2" px="4">
-      <SaasUILogo width="100px" />
-    </Box>
-  }
-  sidebar={
-    <Sidebar>
-      <SidebarSection>
-        <NavItem>Home</NavItem>
-        <NavItem>Settings</NavItem>
-      </SidebarSection>
-    </Sidebar>
-  }
->
-  <Box as="main" flex="1" py="2" px="4" overflowY="auto">
-    Your application content
-  </Box>
-</AppShell>
+import { Box } from '@chakra-ui/react'
+import { AppShell, Sidebar, SidebarSection, NavItem } from '@saas-ui/react'
+
+export default function Page() {
+  return (
+    <AppShell
+      navbar={
+        <Box as="header" borderBottomWidth="1px" py="2" px="4">
+          <SaasUILogo width="100px" />
+        </Box>
+      }
+      sidebar={
+        <Sidebar>
+          <SidebarSection>
+            <NavItem>Home</NavItem>
+            <NavItem>Settings</NavItem>
+          </SidebarSection>
+        </Sidebar>
+      }
+    >
+      <Box as="main" flex="1" py="2" px="4" overflowY="auto">
+        Your application content
+      </Box>
+    </AppShell>
+  )
+}
 ```
 
 ### Variants
@@ -61,85 +68,129 @@ The default variant is `fullscreen`, using the `static` variant the AppShell wil
 Use the static variant when the AppShell needs a fixed height, or when using a sticky header / sidebar.
 
 ```jsx height=400px overflow=hidden
-<AppShell
-  variant="static"
-  minH="100%"
-  navbar={
-    <Box
-      as="header"
-      borderBottomWidth="1px"
-      py="2"
-      px="4"
-      position="sticky"
-      top="0"
+import { Box } from '@chakra-ui/react'
+import { AppShell, Sidebar, SidebarSection, NavItem } from '@saas-ui/react'
+
+export default function Page() {
+  return (
+    <AppShell
+      variant="static"
+      minH="100%"
+      navbar={
+        <Box
+          as="header"
+          borderBottomWidth="1px"
+          py="2"
+          px="4"
+          position="sticky"
+          top="0"
+        >
+          <SaasUILogo width="100px" />
+        </Box>
+      }
+      sidebar={
+        <Sidebar position="sticky" top="40px">
+          <SidebarSection>
+            <NavItem>Home</NavItem>
+            <NavItem>Settings</NavItem>
+          </SidebarSection>
+        </Sidebar>
+      }
     >
-      <SaasUILogo width="100px" />
-    </Box>
-  }
-  sidebar={
-    <Sidebar position="sticky" top="40px">
-      <SidebarSection>
-        <NavItem>Home</NavItem>
-        <NavItem>Settings</NavItem>
-      </SidebarSection>
-    </Sidebar>
-  }
->
-  <Box as="main" flex="1" py="2" px="4">
-    Your application content
-  </Box>
-</AppShell>
+      <Box as="main" flex="1" py="2" px="4">
+        Your application content
+      </Box>
+    </AppShell>
+  )
+}
 ```
 
 ### Example layout
 
 Full example with Sidebar, Page <Badge bg="primary.500" >Pro</Badge> and DataGrid <Badge bg="primary.500" >Pro</Badge>
 
-```jsx height=400px overflow=hidden
-<AppShell
-  sidebar={
-    <Sidebar width="30%">
-      <SidebarSection direction="row">
-        <SaasUILogo width="100px" />
-        <Spacer />
-        <Menu>
-          <MenuButton
-            as={IconButton}
-            icon={
-              <PersonaAvatar
-                presence="online"
-                size="xs"
-                src="/showcase-avatar.jpg"
+```jsx height=400px overflow=scroll
+import {
+  Box,
+  Spacer,
+  Button,
+  IconButton,
+  Menu,
+  MenuButton,
+  MenuList,
+  MenuItem,
+} from '@chakra-ui/react'
+import {
+  AppShell,
+  Sidebar,
+  SidebarSection,
+  NavItem,
+  PersonaAvatar,
+} from '@saas-ui/react'
+import {
+  Page,
+  PageHeader,
+  PageBody,
+  DataGrid,
+  DataGridPagination,
+} from '@saas-ui-pro/react'
+import { FiHome, FiUsers } from 'react-icons/fi'
+
+export default function Page() {
+  return (
+    <AppShell
+      sidebar={
+        <Sidebar width="30%">
+          <SidebarSection direction="row">
+            <SaasUILogo width="100px" />
+            <Spacer />
+            <Menu>
+              <MenuButton
+                as={IconButton}
+                icon={
+                  <PersonaAvatar
+                    presence="online"
+                    size="xs"
+                    src="/showcase-avatar.jpg"
+                  />
+                }
+                variant="ghost"
               />
-            }
-            variant="ghost"
-          />
-          <MenuList>
-            <MenuItem>Sign out</MenuItem>
-          </MenuList>
-        </Menu>
-      </SidebarSection>
-      <SidebarSection flex="1" overflowY="auto">
-        <NavItem icon={<FiHome />}>Home</NavItem>
-        <NavItem icon={<FiUsers />}>Contacts</NavItem>
-      </SidebarSection>
-    </Sidebar>
-  }
->
-  <Page title="Page" contentWidth="full">
-    <DataGrid
-      isHoverable
-      isSelectable
-      isSortable
-      columns={[
-        { id: 'name', Header: 'Name' },
-        { id: 'role', Header: 'Role' },
-        { id: 'actions', width: '100px', Cell: () => <Button>Edit</Button> },
-      ]}
-      data={[{ name: 'Renata Alink', role: 'Founder' }]}
+              <MenuList>
+                <MenuItem>Sign out</MenuItem>
+              </MenuList>
+            </Menu>
+          </SidebarSection>
+          <SidebarSection flex="1" overflowY="auto">
+            <NavItem icon={<FiHome />}>Home</NavItem>
+            <NavItem icon={<FiUsers />}>Contacts</NavItem>
+          </SidebarSection>
+        </Sidebar>
+      }
     >
-      <DataGridPagination />
-    </DataGrid>
-  </Page>
-</AppShell>
+      <Page>
+        <PageHeader title="Users" />
+        <PageBody p="0">
+          <DataGrid
+            isHoverable
+            isSelectable
+            isSortable
+            columns={[
+              { id: 'name', Header: 'Name' },
+              { id: 'role', Header: 'Role' },
+              {
+                id: 'actions',
+                width: '100px',
+                Cell: () => <Button>Edit</Button>,
+              },
+            ]}
+            data={[{ name: 'Renata Alink', role: 'Founder' }]}
+          >
+            <DataGridPagination />
+          </DataGrid>
+        </PageBody>
+      </Page>
+    </AppShell>
+  )
+}
 ```
