--- a/apps/website/src/pages/docs/components/layout/toolbar/props.mdx
+++ b/apps/website/src/pages/docs/components/layout/toolbar/props.mdx
@@ -10,3 +10,23 @@ The `Toolbar` component and all sub components accept all `Box` properties.
 ### Toolbar Props
 
 <PropsTable of="Toolbar" />
+
+### ToolbarButton Props
+
+<PropsTable of="ToolbarButton" />
+
+### ToolbarGroup Props
+
+The `ToolbarGroup` renders a `ButtonGroup` and accepts all `ButtonGroup` properties.
+
+<PropsTable of="ToolbarGroup" />
+
+### ToolbarToggleGroup Props
+
+The `ToolbarGroup` renders a `ButtonGroup` and accepts all `ButtonGroup` properties.
+
+<PropsTable of="ToolbarToggleGroup" />
+
+### ToolbarToggleButton Props
+
+<PropsTable of="ToolbarToggleButton" />
